# miners

./: meson.build
include/: client.h  common.h  hashmap.h  msglist.h  protocol.h  server.h  ui.h
src/: hashmap.c  msglist.c  protocol.c  server.c
src/client/: client.c  main.c  ui.c
src/server/: main.c
tests/: test_hashmap.c  test_protocol.c  test_server.c
